--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -49,6 +49,10 @@
         height: calc(100vh - 4.1rem - 0rem - 0rem - 0rem);
     }
 
+    .chat-height {
+        height: calc(100vh - 4rem - 40px - 16px - 16.5rem);
+    }
+
     .switch {
         position: relative;
         display: inline-block;
