--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,7 @@
 .tooltip {
     display: inline-block;
     position: relative;
-    border-bottom: 1px dotted #666;
+    /* border-bottom: 1px dotted #666; */
     text-align: left;
 }
 
